# agent-automation-testing

./: .gitignore  _g.py  _h.py  docker-compose.yml  package-lock.json  package.json  start.bat  stop.bat  tsconfig.base.json
Flow/: .$Untitled Diagram.drawio.bkp  FlowChart.md  PLAN_V3.md  PLAN_V4.md  Untitled Diagram.drawio  import_pipeline.py  pipeline-flowchart.json  pipeline-playwright.json
TodoCode/: .gitignore  TodoCode.postman_collection.json  api_documentation.md  run_app.bat
TodoCode/backend/: go.mod  go.sum  main.go  todo.db
TodoCode/design/: code.html
TodoCode/testing/: main.py
apps/admin-app/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/user-app/: Dockerfile  next.config.ts  package.json  tsconfig.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  auto_at.db  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/execution/: __init__.py
backend/app/agents/ingestion/: __init__.py
backend/app/agents/reporting/: __init__.py
backend/app/agents/testcase/: __init__.py
backend/app/api/v1/: agent_configs.py  agent_configs.py.bak  chat.py  deps.py  llm_profiles.py  pipeline.py  pipeline.py.bak  pipeline_templates.py  pipeline_templates.py.bak  stage_configs.py  tools.py  websocket.py
backend/app/api/v1/agent_configs/: __init__.py  _helpers.py  routes.py
backend/app/api/v1/auth/: __init__.py  routes.py
backend/app/api/v1/pipeline/: __init__.py  _background.py  _helpers.py  control.py  results.py  runs.py
backend/app/api/v1/pipeline_templates/: __init__.py  _helpers.py  crud.py  operations.py
backend/app/core/: agent_factory.py  dag_pipeline_runner.py  dag_resolver.py  llm_factory.py  pipeline_runner.py  playwright_output_parser.py  signal_manager.py
backend/app/crews/: __init__.py  artifact_crew.py  base_crew.py  dynamic_crew.py  execution_crew.py  ingestion_crew.py  reporting_crew.py  testcase_crew.py
backend/app/db/: crud.py  database.py  models.py  seed.py
backend/app/middleware/: __init__.py  observability.py
backend/app/schemas/: __init__.py  agent_config.py  llm_profile.py  pipeline.py  pipeline_io.py  pipeline_template.py  stage_config.py
backend/app/services/: __init__.py  auth_service.py  docx_builder.py  event_bus.py  export_service.py  storage_service.py
backend/app/tasks/: __init__.py  execution_tasks.py  reporting_tasks.py  testcase_tasks.py
backend/app/templates/: report.html.j2
backend/app/tools/: __init__.py  api_runner.py  config_loader.py  document_parser.py  document_parser_tool.py  registry.py  test_file_renderer.py  text_chunker.py  text_chunker_tool.py
backend/scripts/: migrate_v1_to_v2.py
backend/tests/: test_crud.py  test_llm_factory.py  test_phase10.py  test_phase2.py  test_phase3.py  test_seed.py
backend/uploads/51d2b62f-fab6-43aa-8052-a5648f40cc07/: spec.txt
backend/uploads/8bc219cb-2801-41d7-8651-f77523d36d3c/: requirements.md
backend/uploads/f7016ccf-c79f-4ca2-9379-dfc8541d53f2/: requirements.md
code/: .env  automationtestingmultiagent.py  main.py  pyproject.toml
docs/: agent-llm.md  api-flow.md  architecture.md  changelog.md  data-models.md  index.md  observability.md  pipeline-execution.md
docs/Flow/: FlowChart.drawio  PLAN_V1.md  PLAN_V2.md  pipeline-flowchart.json  (+1 more)
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
(+171 files in other folders)
