[project]
name = "auto-at-backend"
version = "0.1.0"
description = "Auto-AT: Multi-Agent Testing Automation Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "litellm>=1.50.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    # CrewAI multi-agent framework.
    # lancedb is pinned to 0.30.0 because 0.30.1+ dropped Windows wheels
    # (only manylinux / macOS builds are published for newer releases).
    # Revisit the pin when lancedb publishes win_amd64 wheels again:
    #   https://github.com/lancedb/lancedb/releases
    "crewai>=1.0.0",
    "lancedb==0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
